Component Added By Akshay Salunke

--- a/Frontend/travelbuddy/src/component/Role/Style.css
+++ b/Frontend/travelbuddy/src/component/Role/Style.css
@@ -11,3 +11,9 @@
     font-size: 12px;
     margin: 6px;
 }
+.edit_profile-button{
+    width: 123px;
+    height: 40px;
+    font-size: 12px;
+    margin: 6px;
+}
