--- a/Frontend/travelbuddy/src/component/Role/Style.css
+++ b/Frontend/travelbuddy/src/component/Role/Style.css
@@ -17,3 +17,36 @@
     font-size: 12px;
     margin: 6px;
 }
+
+.property-cards {
+    width: 18rem;
+    max-height: 330px;
+    overflow: auto;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+}
+
+.property-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-property-name{
+    font-size: 22px;
+    margin-top: -86px;
+    font-weight: 600;
+    height: auto;
+}
+
+.description-card {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 260px;
+}
+
+.p-card-footer{
+    margin-top: -63px;
+}
+
